# ripmors

./: .gitignore  4-unicode.txt  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  bench  build.rs  cores  pre-commit  profile  profile.json
.github/workflows/: workflow.yml
benches/: bench.rs  criterion.rs  tango.rs  unicode_test_page.txt
src/: decode.rs  decode_mapping.rs  encode_ascii.rs  encode_ascii_mapping.rs  encode_standard.rs  encode_standard_mapping.rs  encode_unicode.rs  encode_unicode_mapping.rs  lib.rs  main.rs  mappings.rs
tests/: tests.rs
