[package]
name = "ripmors"
version = "0.1.0"
authors = ["Quentin Santos <qsantos@qsantos.fr>"]
description = "ripmors is a library for encoding and decoding international Morse code and several variants"
repository = "https://github.com/qsantos/ripmors/"
license = "Apache-2.0 AND MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
tango-bench = "0.6.0"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "tango"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
simdutf8 = "0.1.4"

[features]
default = ["clap"]

[[bin]]
name = "ripmors"
required-features = ["clap"]
